--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
         <div class="skills"></div>
 
         <h2>Highlighted Projects</h2>
-        <div class="projects"></div>
+        <div class="projects">
+         <!-- Problem Statement Assignment -->
+         <section class="project">
+            <a href="files/problem_statement.pdf">
+                <h3>Problem Statement</h3>
+            </a>
+            <a href="files/problem_statement.pdf">
+                <img src="images/problem-statement.png">
+            </a>
+            <p>Many Iphone users are having issues regarding their camera not living up to its promised potential.
+            </p>
+    </section>
+        </div>
 
         <h2>Contact me</h2>
         <div class="contact"></div>
