added affinity Diagram

--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
             <a href="files/problem_statement.pdf">
                 <img src="images/problem-statement.png">
             </a>
-            <p>Many Iphone users are having issues regarding their camera not living up to its promised potential.
+            <p>
+                Many Iphone users are having issues regarding their camera not living up to its promised potential.
+            </p>
+    </section>
+         <!--Affinity Diagram Assignment -->
+         <section class="project">
+            <a href="files/Affinity Diagram.pdf">
+                <h3>Affinity Diagram</h3>
+            </a>
+            <a href="files/Affinity Diagram.pdf">
+                <img src="images/Affinity Diagram.png">
+            </a>
+             <p>
+                Affinity diagram describing all of the possible solutions and other aspects of our future project
             </p>
     </section>
         </div>
