--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </section>
          <!--Sketches Assignment-->
          <section class="project">
-            <a href="files/sketches">
+            <a href="files/sketches.pdf">
                 <h3>Sketch</h3>
             </a>
-            <a href="files/sketches">
+            <a href="files/sketches.pdf">
                 <img src="images/sketches.png">
             </a>
             <p>
