--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
              dedicated to the user will look.
             </p>
             </section>
+
+            <!--Paper Prototype Assignment-->
+        <section class="project">
+            <a href="files/prototype.pdf">
+                <h3> Prototype</h3>
+            </a>
+            <a href="files/prototype.pdf">
+                <img src="images/Proto.png">
+            </a>
+            <p> In this prototype we can see how the app interacts with the user.
+                The app shows all the modes and features. This varies from nature to 
+            landscapes and even AI. </p>
+            </section>
+
         </div>
 
         <h2>Contact me</h2>
