--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <body>
         <h1>Zykeeria Riggins</h1>
 
-        <h2>About me</h2>
         <div class="about"></div>
+        <!-- About Me -->
+        <h2> About Me </h2>
+        <div class="about">
+        <img src="images/profile_image.jpg">
+            <p>
+            Hello! I'm Zykeeria Riggins, a sophmore at the University of 
+            South Carolina studying Computer Science. I am passionate 
+            about exploring the ethical side of hacking and the broader 
+            field of cybersecurity. My goal is to become a penetration tester 
+            for a government agency.
+            </p>
+        </div>
 
         <h2>Skills</h2>
         <div class="skills"></div>
