--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         </div>
 
         <h2>Skills</h2>
-        <div class="skills"></div>
+        <div class = "skills">
+            <p><b>Coding Languages:</b>Java, Git, Python, CSS, HTML</p>
+            <p><b>Organizations:</b>Women in Computing </p>
+            <p><b>Resume:</b><a href="Zykeeria's Resume.pdf">Download here</a></p>
+            </div>
 
         <h2>Highlighted Projects</h2>
         <div class="projects">
