--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class = "skills">
             <p><b>Coding Languages:</b> Java, Git, Python, CSS, HTML</p>
             <p><b>Organizations:</b> Women in Computing </p>
-            <p><b>Resume:</b><a href="ZykeeriaResume.pdf">Download here</a></p>
+            <p><b>Resume:</b><a href="files/ZykeeriaResume.pdf">Download here</a></p>
             </div>
 
         <h2>Highlighted Projects</h2>
