--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
                 The app shows all the modes and features. This varies from nature to 
             landscapes and even AI. </p>
             </section>
+            <section class="project">
+                <a href="https://github.com/ZykeeriaR/AdvProgCode">
+                <h3>Advanced Programming Course Work</h3>
+                </a>
+                <a href="https://github.com/ZykeeriaR/AdvProgCode">
+                <img src="images/advprog.png">
+                </a>
+                <p>Brief description of the repo</p>
+                </section>
 
         </div>
 
