added description and contacts

--- a/index.html
+++ b/index.html
@@ -91,12 +91,16 @@
                 <a href="https://github.com/ZykeeriaR/AdvProgCode">
                 <img src="images/advprog.png">
                 </a>
-                <p>Brief description of the repo</p>
+                <p>The provided codes works with heights, define height ranges, and other 
+                    similar task. They were used for an assignment in my CSCE 240 
+                    Advanced Programming Techniques course.
+                </p>
                 </section>
 
         </div>
 
         <h2>Contact me</h2>
         <div class="contact"></div>
+        <p><b>Email:</b> RigginsZykeeria@gmail.com</p>
     </body>
 </html>
