--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </section>
             <section class="project">
                 <a href="https://github.com/ZykeeriaR/AdvProgCode">
-                <h3>Advanced Programming Course Work</h3>
+                <h3>Advanced Programming Techniques Work</h3>
                 </a>
                 <a href="https://github.com/ZykeeriaR/AdvProgCode">
                 <img src="images/advprog.png">
