edited about me section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img src="images/profile_image.jpg">
             <p>
             Hello! I'm Zykeeria Riggins, a sophmore at the University of 
-            South Carolina studying Computer Science. I am passionate 
-            about exploring the ethical side of hacking and the broader 
-            field of cybersecurity. My goal is to become a penetration tester 
-            for a government agency. 
+            South Carolina studying Cyber Policy and Ethics and Cybersecurity
+            Operations. I am passionate about exploring the ethical side of 
+            hacking and the broader field of cybersecurity. My goal is to become
+            a penetration tester for a government agency. 
             </p>
         </div>
 
